--- a/_config.yml
+++ b/_config.yml
@@ -14,29 +14,24 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Faith chemurgor limo
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
-
-description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
-
+tagline: Data & AI Enthusiast/Virtual Assistant/Problem solver
+description: Empowering people and businesses through data driven insightsand smart virtual solutions. Passionate about technnology,learning and creatingmeaninngful impact.
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: ""
 
 github:
-  username: github_username # change to your GitHub username
-
+  username: Faithchemurgor9
 twitter:
   username: twitter_username # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
-  links:
+  name: FAITH CHEMURGOR LIMO
+  email:flimo9129@gmail.com
     # The first element serves as the copyright owner's link
     - https://twitter.com/username # change to your Twitter homepage
     - https://github.com/username # change to your GitHub homepage
